# time_requirements

./: .gitignore  Cargo.toml  LICENSE  README.md  report.md  tarpaulin-report.json
.github/workflows/: rust.yml  security.yml
src/: report.rs  task.rs  time_tracker.rs
tests/: test_time_requirements.rs
